feat(projects): auto sync score
